# aoc-2021

./: .gitignore  README.md  aoc2021.cabal  main.hs
.github/workflows/: haskell.yml
01/: Day01.hs  Main.hs  README.md  main.hs
02/: Day02.hs  Main.hs  README.md
03/: Day03.hs  Main.hs  README.md  main.hs
04/: Day04.hs  Main.hs  README.md  main.hs
05/: Day05.hs  README.md  main.hs
06/: Day06.hs  Main.hs  README.md
07/: Day07.hs  README.md  main.hs
08/: Day08.hs  Main.hs  README.md  input.txt  main.hs
09/: Day09.hs  Main.hs  README.md
10/: Day10.hs  Main.hs  README.md
11/: Day11.hs  Main.hs  README.md  main.hs
12/: Day12.hs  Main.hs  README.md  input.txt  main.hs
13/: Day13.hs  README.md  main.hs
14/: Day14.hs  Main.hs  README.md
15/: Day15.hs  Main.hs  README.md  main.hs
16/: .test1.txt.swp  Day16.hs  README.md  main.hs  test.txt  test1.txt
17/: Day17.hs  README.md  input.txt  main.hs  test.txt
18/: Day18.hs  README.md  main.hs
19/: Day19.hs  Main.hs  README.md  main.hs
20/: Day20.hs  Main.hs  README.md  input.txt
21/: Day21.hs  README.md
22/: Day22.hs  input.txt
23/: Day23.hs  README.md  input.txt  test.txt  test1.txt
24/: Day24.hs  README.md
25/: Day25.hs  README.md
