cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

author:             Dreary Lisper
maintainer:         drearylisper@gmail.com

library Day01
    exposed-modules:  Day01
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   01
    default-language: Haskell2010

library Day02
    exposed-modules:  Day02
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   02
    default-language: Haskell2010

library Day03
    exposed-modules:  Day03
    build-depends:    containers, base ^>=4.14.1.0
    hs-source-dirs:   03
    default-language: Haskell2010

library Day04
    exposed-modules:  Day04
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   04
    default-language: Haskell2010

library Day05
    exposed-modules:  Day05
    build-depends:    containers, base ^>=4.14.1.0
    hs-source-dirs:   05
    default-language: Haskell2010

library Day06
    exposed-modules:  Day06
    build-depends:    containers, base ^>=4.14.1.0
    hs-source-dirs:   06
    default-language: Haskell2010

library Day07
    exposed-modules:  Day07
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   07
    default-language: Haskell2010

library Day08
    exposed-modules:  Day08
    build-depends:    containers, base ^>=4.14.1.0
    hs-source-dirs:   08
    default-language: Haskell2010

library Day09
    exposed-modules:  Day09
    build-depends:    array, containers, base ^>=4.14.1.0
    hs-source-dirs:   09
    default-language: Haskell2010

library Day10
    exposed-modules:  Day10
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   10
    default-language: Haskell2010

library Day11
    exposed-modules:  Day11
    build-depends:    array, base ^>=4.14.1.0
    hs-source-dirs:   11
    default-language: Haskell2010

library Day12
    exposed-modules:  Day12
    build-depends:    containers, base ^>=4.14.1.0
    hs-source-dirs:   12
    default-language: Haskell2010

library Day13
    exposed-modules:  Day13
    build-depends:    containers, base ^>=4.14.1.0
    hs-source-dirs:   13
    default-language: Haskell2010

library Day14
    exposed-modules:  Day14
    build-depends:    containers, base ^>=4.14.1.0
    hs-source-dirs:   14
    default-language: Haskell2010

library Day15
    exposed-modules:  Day15
    build-depends:    heap, array, containers, base ^>=4.14.1.0
    hs-source-dirs:   15
    default-language: Haskell2010

library Day16
    exposed-modules:  Day16
    build-depends:    containers, base ^>=4.14.1.0
    hs-source-dirs:   16
    default-language: Haskell2010

library Day17
    exposed-modules:  Day17
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   17
    default-language: Haskell2010

library Day18
    exposed-modules:  Day18
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   18
    default-language: Haskell2010

library Day19
    exposed-modules:  Day19
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   19
    default-language: Haskell2010

library Day20
    exposed-modules:  Day20
    build-depends:    containers, base ^>=4.14.1.0
    hs-source-dirs:   20
    default-language: Haskell2010

library Day21
    exposed-modules:  Day21
    build-depends:    containers, base ^>=4.14.1.0
    hs-source-dirs:   21
    default-language: Haskell2010
