cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

author:             Dreary Lisper
maintainer:         drearylisper@gmail.com

library AOC
    exposed-modules:  Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11, Day12, Day13, Day14, Day15, Day16, Day17, Day18, Day19, Day20, Day21, Day22
    build-depends:    heap, containers, array, base ^>=4.14.1.0
    hs-source-dirs:   01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22
    default-language: Haskell2010
